--- a/Models/SpeechLM/2024.06.06_Small-E.md
+++ b/Models/SpeechLM/2024.06.06_Small-E.md
@@ -28,9 +28,9 @@ Moreover they lack specific inductive bias with regards to the monotonic nature 
 In response, we propose to replace transformers with emerging recurrent architectures and introduce specialized cross-attention mechanisms for reducing repeating and skipping issues.
 Consequently our architecture can be efficiently trained on long samples and achieve state-of-the-art zero-shot voice cloning against baselines of comparable size.
 
-## 1.Introduction·引言
+## 1·Introduction·引言
 
-### 1.1.Context & Related Works
+### 1.1·Context & Related Works
 
 Over the recent years, neural text-to-speech synthesis (TTS) has gained spectacular improvements in terms of quality with a diversity of approaches and paradigms ([2019.05.22_FastSpeech](../TTS2_Acoustic/2019.05.22_FastSpeech.md), [2021.06.11_VITS](../E2E/2021.06.11_VITS.md); [2023.06.23_VoiceBox](2023.06.23_VoiceBox.md), [2023.09.10_VoiceFlow](../Flow/2023.09.10_VoiceFlow.md)).
 In particular, discrete speech and audio representations allowed immediate use of well-established decoder-only transformers such as GPT [5] in many state-of-the-art text-to-audio and text-to-speech model.
@@ -45,7 +45,7 @@ For instance Bark [9] separately predicts semantic codes from text, first quanti
 [2023.05.16_SoundStorm](2023.05.16_SoundStorm.md) predicts audio from semantic codes in parallel by leveraging a MaskGit [11] architecture.
 In contrast, [2023.04.18_NaturalSpeech2](../Diffusion/2023.04.18_NaturalSpeech2.md) avoids the language model formulation by learning the continuous latents of an RVQ codec with a diffusion model, sidestepping autoregressive modeling or semantic encoding and instead relying on given durations and fundamental frequency.
 
-### 1.2.Linear Surrogate of Decoder Transformer
+### 1.2·Linear Surrogate of Decoder Transformer
 
 Unlike previous RNNs such as LSTM or GRU, Transformers are significantly faster to train, do not suffer from vanishing gradient and demonstrate scalability with parameters reaching into the hundreds of billions.
 Further hardware-aware implementation of self-attention has established it as a prevalent choice for sequence modeling, including applications in audio processing.
@@ -65,31 +65,31 @@ $$
 
 
 
-### 1.3.TTS as A Conditional Codec Language Modeling
+### 1.3·TTS as A Conditional Codec Language Modeling
 
-### 1.4.Positioning & Contributions
+### 1.4·Positioning & Contributions
 
-## 2.Methodology·方法
+## 2·Methodology·方法
 
-### 2.1.Model Architecture
+### 2.1·Model Architecture
 
-## 3.Experiments·实验
+## 3·Experiments·实验
 
-### 3.1.Dataset
+### 3.1·Dataset
 
-### 3.2.Implementation Details
+### 3.2·Implementation Details
 
-### 3.3.Benchmark
+### 3.3·Benchmark
 
-### 3.4.Methodology
+### 3.4·Methodology
 
-#### 3.4.1.Objective Evaluation
+#### 3.4.1·Objective Evaluation
 
-#### 3.4.2.Subjective Evaluation
+#### 3.4.2·Subjective Evaluation
 
-## 4.Results & Discussion·结果与讨论
+## 4·Results & Discussion·结果与讨论
 
-## 5.Conclusion·结论
+## 5·Conclusion·结论
 
 In this paper we presented Small-E, a TTS model based on codec language model.
 The proposed model tackles limitations of current LM TTS models.
