--- a/Models/SpeechLM/2024.06.07_XTTS.md
+++ b/Models/SpeechLM/2024.06.07_XTTS.md
@@ -35,14 +35,14 @@ In this paper, we aim to alleviate this issue by proposing and making publicly a
 Our method builds upon the Tortoise model and adds several novel modifications to enable multilingual training, improve voice cloning, and enable faster training and inference.
 ***XTTS*** was trained in 16 languages and achieved state-of-the-art (SOTA) results in most of them.
 
-## 1.Introduction: 引言
+## 1·Introduction: 引言
 
-## 2.Related Works: 相关工作
+## 2·Related Works: 相关工作
 
-## 3.Methodology: 方法
+## 3·Methodology: 方法
 
-## 4.Experiments: 实验
+## 4·Experiments: 实验
 
-## 5.Results: 结果
+## 5·Results: 结果
 
-## 6.Conclusions: 结论
+## 6·Conclusions: 结论
