--- a/Models/SpeechLM/2024.06.12_VALL-E_R.md
+++ b/Models/SpeechLM/2024.06.12_VALL-E_R.md
@@ -39,16 +39,16 @@ In addition, it requires fewer autoregressive steps, with over 60% time reductio
 This research has the potential to be applied to meaningful projects, including the creation of speech for those affected by aphasia.
 Audio samples will be available at: https://aka.ms/valler.
 
-## 1.Introduction: 引言
+## 1·Introduction: 引言
 
-## 2.Related Works: 相关工作
+## 2·Related Works: 相关工作
 
-## 3.Methodology: 方法
+## 3·Methodology: 方法
 
 In this study, we propose a robust and efficient zero-shot TTS system named ***VALL-E R***.
 We first introduce the codec-merging approach in Section 3.1 which can improve inference speed without retraining the codec, and then illustrate the monotonic alignment strategy in decoder-only neural codec LM in Section 3.2.
 
-### 3.1.Codec-Merging Approach
+### 3.1·Codec-Merging Approach
 
 Building upon the foundational work of [EnCodec](../Speech_Neural_Codec/2022.10.24_EnCodec.md), we introduce the concept of a merged codec.
 This innovative approach enables the downsampling of discrete codes across various layers through alterations in the inference forward process.
@@ -66,13 +66,13 @@ Then the codec-merging module consists of two steps: the first one is downsampli
 Next, the residual representation processed by the Merge module will be feed into the following VQ layer to quantized into discrete code $C^{1\times T}_{d}$ through nearest-neighbor lookup over the codebook embeddings.
 Through the merge module, we reduced the resolution of $C^{1\times T}_{d}$ by ensuring consistent code of consecutive $m_d$ frames.
 
-### 3.2.Neural Codec LM with Monotonic Alignment
+### 3.2·Neural Codec LM with Monotonic Alignment
 
 Previously, monotonic strategies were only applicable to encoder-decoder structures.
 To address the robustness issue in the decoder-only transformer based TTS, we integrated phonemes prediction into the training of neural codec LM and design the monotonic alignment strategy during the inference process.
 The overview is illustrated in Figure.03 and details of training and inference are discussed in the subsequent sections.
 
-#### 3.2.1.Training with Phoneme Prediction
+#### 3.2.1·Training with Phoneme Prediction
 
 To achieve a good trade-off between speech quality and inference speed, our ***VALL-E R*** includes two models: autoregressive (AR) and non-autoregressive (NAR), which is following [VALL-E](2023.01.05_VALL-E.md).
 Specifically, given a training data pair $\{\mathbf{s}, \mathbf{p}\}$, where $s$ is speech sample, and $\mathbf{p} = \{p_1, p_2, \cdots, p_L\}$ is its corresponding phoneme transcription.
@@ -95,7 +95,7 @@ $$
 
 We also share the parameters of the acoustic embedding layer and the output prediction layer, which means the weights of the $j$-th prediction layer are the same as the $(j + 1)$-th acoustic embedding layer.
 
-#### 3.2.2.Inference with Monotonic Alignment
+#### 3.2.2·Inference with Monotonic Alignment
 
 After training with teacher forcing, the neural codec LM we obtained is surprising in context learning ability.
 With just a 3 seconds acoustic prompt, we can replicate the timbre and prosody of unseen speakers without any fine-tuning or adaptation methods ([VALL-E](2023.01.05_VALL-E.md)).
@@ -124,17 +124,17 @@ This sequential alignment is critical as it inherently prevents the repetition o
 - Completeness: It is mandated that each phoneme token is represented by at least one corresponding acoustic token.
 This coverage requirement is essential for preventing the word skipping.
 
-#### 3.2.3.Inference for Controlling Prosody
+#### 3.2.3·Inference for Controlling Prosody
 
 In the inference process, benefiting from the powerful in context learning ability of the LM, our proposed ***VALL-E R*** can automatically clone both timbre and prosody of the speaker in the prompt by predicting the acoustic and phoneme autoregressively.
 Because ***VALL-E R*** explicitly models phoneme, it has strong control over prosody: when we use preset phoneme sequences to replace the self-predicted phoneme sequences in the inference process, we can use the preset prosody to generate speech, thereby achieving the effect of controlling prosody and timbre separately.
 It can also be regarded as a voice conversion task, whose goal is to make the timbre of target speech sound like that of prompt speech without changing the linguistic information and prosody of source speech.
 
-## 4.Experiments: 实验
+## 4·Experiments: 实验
 
-## 5.Results: 结果
+## 5·Results: 结果
 
-## 6.Conclusion: 结论
+## 6·Conclusion: 结论
 
 In this paper, we propose ***VALL-E R***, a robust and efficient zero-shot text-to-speech model based on neural codec language models.
 We first employ codec-merging method to downsample the discrete codes to improve inference speed without affecting the sound quality.
