--- a/Models/SpeechLM/2024.06.14_UniAudio1.5.md
+++ b/Models/SpeechLM/2024.06.14_UniAudio1.5.md
@@ -26,6 +26,9 @@
 
 ## Abstract: 摘要
 
+<details>
+<summary>展开原文</summary>
+
 The Large Language models (LLMs) have demonstrated supreme capabilities in text understanding and generation, but cannot be directly applied to cross-modal tasks without fine-tuning.
 This paper proposes a cross-modal in-context learning approach, empowering the frozen LLMs to achieve multiple audio tasks in a few-shot style without any parameter update.
 Specifically, we propose a novel and LLMs-driven audio codec model, LLM-Codec, to transfer the audio modality into the textual space, i.e., representing audio tokens with words or sub-words in the vocabulary of LLMs, while keeping high audio reconstruction quality.
@@ -36,14 +39,17 @@ The experimental results demonstrate that the LLMs equipped with the proposed LL
 It validates the feasibility and effectiveness of the proposed cross-modal in-context learning approach.
 To facilitate research on few-shot audio task learning and multi-modal LLMs, we have open-sourced the LLM-Codec model.
 
-## 1.Introduction: 引言
+</details>
+<br>
 
-## 2.Related Works: 相关工作
+## 1·Introduction: 引言
 
-## 3.Methodology: 方法
+## 2·Related Works: 相关工作
 
-## 4.Experiments: 实验
+## 3·Methodology: 方法
 
-## 5.Results: 结果
+## 4·Experiments: 实验
 
-## 6.Conclusions: 结论
+## 5·Results: 结果
+
+## 6·Conclusions: 结论
