--- a/Models/SpeechLM/2024.06.22_TacoLM.md
+++ b/Models/SpeechLM/2024.06.22_TacoLM.md
@@ -32,14 +32,14 @@ Meanwhile, an additional gated cross-attention layer is included for each decode
 In the evaluation of the Librispeech corpus, the proposed ***TacoLM*** achieves a better word error rate, speaker similarity, and mean opinion score, with 90% fewer parameters and 5.2 times speed up, compared with [VALL-E](2023.01.05_VALL-E.md).
 Demo and code is available at [this https URL](https://ereboas.github.io/TacoLM/).
 
-## 1.Introduction: 引言
+## 1·Introduction: 引言
 
-## 2.Related Works: 相关工作
+## 2·Related Works: 相关工作
 
-## 3.Methodology: 方法
+## 3·Methodology: 方法
 
-## 4.Experiments: 实验
+## 4·Experiments: 实验
 
-## 5.Results: 结果
+## 5·Results: 结果
 
-## 6.Conclusions: 结论
+## 6·Conclusions: 结论
