--- a/Models/SpeechLM/2024.06.25_T5-TTS.md
+++ b/Models/SpeechLM/2024.06.25_T5-TTS.md
@@ -31,14 +31,14 @@ We examine these challenges in an encoder-decoder transformer model and find tha
 To make the alignment more robust, we propose techniques utilizing CTC loss and attention priors that encourage monotonic cross-attention over the text tokens.
 Our guided attention training technique does not introduce any new learnable parameters and significantly improves robustness of LLM-based TTS models.
 
-## 1.Introduction: 引言
+## 1·Introduction: 引言
 
-## 2.Related Works: 相关工作
+## 2·Related Works: 相关工作
 
-## 3.Methodology: 方法
+## 3·Methodology: 方法
 
-## 4.Experiments: 实验
+## 4·Experiments: 实验
 
-## 5.Results: 结果
+## 5·Results: 结果
 
-## 6.Conclusions: 结论
+## 6·Conclusions: 结论
