--- a/Models/SpeechLM/2024.07.15_Qwen2-Audio.md
+++ b/Models/SpeechLM/2024.07.15_Qwen2-Audio.md
@@ -42,14 +42,14 @@ Additionally, DPO has optimized the model's performance in terms of factuality a
 According to the evaluation results from AIR-Bench, ***Qwen2-Audio*** outperformed previous SOTAs, such as Gemini-1.5-pro, in tests focused on audio-centric instruction-following capabilities.
 ***Qwen2-Audio*** is open-sourced with the aim of fostering the advancement of the multi-modal language community.
 
-## 1.Introduction: 引言
+## 1·Introduction: 引言
 
-## 2.Related Works: 相关工作
+## 2·Related Works: 相关工作
 
-## 3.Methodology: 方法
+## 3·Methodology: 方法
 
-## 4.Experiments: 实验
+## 4·Experiments: 实验
 
-## 5.Results: 结果
+## 5·Results: 结果
 
-## 6.Conclusions: 结论
+## 6·Conclusions: 结论
