--- a/Models/SpeechLM/2024.08.05_LSLM.md
+++ b/Models/SpeechLM/2024.08.05_LSLM.md
@@ -59,7 +59,7 @@ Demo can be found at https://ddlbojack.github.io/LSLM.
 本研究旨在推动交互式语音对话系统的发展, 增强其在现实世界中的应用性.
 演示可在 https://ddlbojack.github.io/LSLM 找到.
 
-## 1.Introduction: 引言
+## 1·Introduction: 引言
 
 <details>
 <summary>展开原文</summary>
@@ -158,7 +158,7 @@ Experiments indicate that our proposed ***LSLM*** can achieve duplexing capabili
 3. 我们引入三种混合双工信号的方法: **早期融合 (Early Fusion)**, **中期融合 (Middle Fusion)**, 和 **晚期融合 (Late Fusion)**, 中期融合提供了最佳的语音生成和实时交互之间的平衡;
 4. 我们测试了 ***LSLM*** 在两种场景下的 FDM 能力: **命令式 FDM** 和 **声音式 FDM**, 实验表明我们所提的 ***LSLM*** 可以在对之前系统影响很小的情况下实现全双工能力.
 
-## 2.Related Works: 相关工作
+## 2·Related Works: 相关工作
 
 ![../SpeechLM/Images/2024.08.05_LSLM_Fig.01.png](../SpeechLM/Images/2024.08.05_LSLM_Fig.01.png)
 
@@ -232,7 +232,7 @@ This gap highlights the need for further research and development to fully under
 尽管有了这些进展, 但目前还没有公开可用的开源模型或全双工 SLM 的详细分析.
 这一差距凸显了进一步研究和开发以完全理解和优化语音语言模型中全双工能力的需求.
 
-## 3.Methodology: 方法
+## 3·Methodology: 方法
 
 ### Full Duplex Modeling (FDM): 全双工建模
 
@@ -512,7 +512,7 @@ $$
 - **中期融合**: 将听觉通道和说话通道在每个 Transformer 块处融合. 具体地, 除了说话通道的隐藏状态和位置嵌入, 听觉通道还加在每个 Transformer 块的输入中.
 - **晚期融合**: 将听觉通道和说话通道在输出 logits 处 Softmax 操作之前进行融合.
 
-## 4.Experiments: 实验
+## 4·Experiments: 实验
 
 ### Model Details: 模型细节
 
@@ -634,7 +634,7 @@ These metrics consider both the success rate of turn-taking (Recall) and the rat
 基于这些情况, 我们构造混淆矩阵, 准确率, 召回率, 和 F1 分数.
 这些指标考虑了轮次转换的成功率 (召回率) 和误判率 (准确率), 为模型的交互能力提供了全面的评估.
 
-## 5.Results: 结果
+## 5·Results: 结果
 
 <details>
 <summary>展开原文</summary>
@@ -791,7 +791,7 @@ One potential reason is that the SSL encoder has not encountered diverse noise d
 如听觉通道的自监督学习编码器在继续训练比固定参数的表现更好.
 出现这个现象的一个潜在的原因是自监督学习编码器在预训练期间没有遇到多样的噪声, 当使用固定的预训练参数时, 提取混合了人类语音和噪音音频时会形成瓶颈.
 
-## 6.Conclusions: 结论
+## 6·Conclusions: 结论
 
 <details>
 <summary>展开原文</summary>
