--- a/Models/SpeechLM/2024.08.09_VITA.md
+++ b/Models/SpeechLM/2024.08.09_VITA.md
@@ -44,14 +44,14 @@ Beyond foundational capabilities, we have made considerable progress in enhancin
 While there is still lots of work to be done on ***VITA*** to get close to close-source counterparts, we hope that its role as a pioneer can serve as a cornerstone for subsequent research.
 Project Page: [this https URL](https://vita-home.github.io/).
 
-## 1.Introduction: 引言
+## 1·Introduction: 引言
 
-## 2.Related Works: 相关工作
+## 2·Related Works: 相关工作
 
-## 3.Methodology: 方法
+## 3·Methodology: 方法
 
-## 4.Experiments: 实验
+## 4·Experiments: 实验
 
-## 5.Results: 结果
+## 5·Results: 结果
 
-## 6.Conclusions: 结论
+## 6·Conclusions: 结论
