--- a/Models/SpeechLM/2024.08.28_VoxInstruct.md
+++ b/Models/SpeechLM/2024.08.28_VoxInstruct.md
@@ -38,14 +38,14 @@ We also incorporate multiple Classifier-Free Guidance (CFG) strategies into our 
 Furthermore, our model architecture and training strategies allow for the simultaneous support of combining speech prompt and descriptive human instruction for expressive speech synthesis, which is a first-of-its-kind attempt.
 Codes, models and demos are at: [this https URL](https://github.com/thuhcsi/VoxInstruct).
 
-## 1.Introduction: 引言
+## 1·Introduction: 引言
 
-## 2.Related Works: 相关工作
+## 2·Related Works: 相关工作
 
-## 3.Methodology: 方法
+## 3·Methodology: 方法
 
-## 4.Experiments: 实验
+## 4·Experiments: 实验
 
-## 5.Results: 结果
+## 5·Results: 结果
 
-## 6.Conclusions: 结论
+## 6·Conclusions: 结论
