--- a/Models/SpeechLM/2024.09.11_SSR-Speech.md
+++ b/Models/SpeechLM/2024.09.11_SSR-Speech.md
@@ -34,7 +34,7 @@ Our approach achieves the state-of-the-art performance in the RealEdit speech ed
 Furthermore, ***SSR-Speech*** excels in multi-span speech editing and also demonstrates remarkable robustness to background sounds.
 [Source code](https://github.com/WangHelin1997/SSR-Speech) and [demos](https://wanghelin1997.github.io/SSR-Speech-Demo/) are released.
 
-## 1.Introduction: 引言
+## 1·Introduction: 引言
 
 Nowadays, zero-shot text-based speech generation \cite{DBLP:conf/icassp/CooperLYFWCY20,[YourTTS [2]](../E2E/2021.12.04_YourTTS.md),DBLP:conf/icml/BaiZCML022,DBLP:journals/corr/abs-2406-00654} has garnered significant attention in the speech community, particularly in areas like speech editing (SE) and text-to-speech (TTS) synthesis.
 Given an unseen speaker during training, zero-shot SE focuses on modifying specific words or phrases within an utterance to align with a target transcript while preserving the unchanged portions of the original speech, and zero-shot TTS is concerned with generating the whole speech following a target transcript.
@@ -57,9 +57,9 @@ The training pipeline of ***SSR-Speech*** includes single-span and multi-span ed
 In addition, the watermark encodec leverages the original unedited speech segments for the waveform reconstruction, which provides better recovery compared to the EnCodec model, especially for speech with background noise or music.
 (iv) Extensive experimental results show the effectiveness of ***SSR-Speech***, which significantly outperforms existing methods on both the zero-shot SE and TTS tasks.
 
-## 2.Related Works: 相关工作
+## 2·Related Works: 相关工作
 
-## 3.Methodology: 方法
+## 3·Methodology: 方法
 
 ***SSR-Speech*** introduces a causal [Transformer [19]](../_Transformer/2017.06.12_Transformer.md) decoder that takes both text tokens and audio neural codec tokens as input and predicts the masked audio tokens in a language modeling manner.
 
@@ -161,7 +161,7 @@ Consequently, the input to the speech decoder includes the audio codes, the wate
 Moreover, we found that using skip connections ([U-Net [24]](../_Basis/U-Net.md)) improves reconstruction quality and accelerates model convergence.
 Therefore, we fuse multi-scale features between each block, following the approach used in [U-Net [24]](../_Basis/U-Net.md).
 
-## 4.Experiments: 实验
+## 4·Experiments: 实验
 
 For the ***SSR-Speech*** model, we use the Gigaspeech XL set \cite{DBLP:conf/interspeech/ChenCWDZWSPTZJK21} as the training data, which contains 10k hours of audio at a 16kHz sampling rate.
 Audio files shorter than 2 seconds or longer than 15 seconds are excluded.
@@ -218,7 +218,7 @@ In addition, we test MOS estimates for multi-span editing in the RealEdit datase
 For subjective evaluation, we invited $20$ listeners to conduct MOS and Similar MOS (SMOS) assessments, using $60$ randomly selected samples from the RealEdit and LibriTTS test sets.
 We report all these metrics with $95\%$ confidence interval.
 
-## 5.Results: 结果
+## 5·Results: 结果
 
 Table \ref{tab:result1} presents the results of the speech editing evaluations on RealEdit.
 ***SSR-Speech*** outperforms the baselines across all metrics.
@@ -236,7 +236,7 @@ Table~\ref{tab:result2} reports the results of TTS evaluations on LibriTTS.
 ***SSR-Speech*** demonstrates strong performance across multiple metrics, indicating that it produces high-quality, natural-sounding speech with excellent speaker similarity.
 Compared to VoiceCraft, we attribute the performance improvement primarily to the TTS-enhanced training and the inference-only CFG in ***SSR-Speech***.
 
-## 6.Conclusions: 结论
+## 6·Conclusions: 结论
 
 In this paper, we proposed ***SSR-Speech***, a stable, safe, and robust zero-shot text-based SE and TTS model.
 ***SSR-Speech*** is a neural codec language model, which ensures strong inference stability and robustness for multi-span editing and background noise.
