--- a/Models/SpeechLM/2024.09.17_Moshi.md
+++ b/Models/SpeechLM/2024.09.17_Moshi.md
@@ -61,14 +61,14 @@ Our resulting model is the first real-time full-duplex spoken large language mod
 这种 `内心独白` 方法不仅显著提高了生成语音的语言质量, 我们还展示了它如何提供流式语音识别和文本转语音.
 我们得到的模型是第一个实时全双工口语大型语言模型, 理论延迟为 160 毫秒, 实际延迟为 200 毫秒, 并且可以在以下链接中获取：[this https URL](https://github.com/kyutai-labs/moshi).
 
-## 1.Introduction: 引言
+## 1·Introduction: 引言
 
-## 2.Related Works: 相关工作
+## 2·Related Works: 相关工作
 
-## 3.Methodology: 方法
+## 3·Methodology: 方法
 
-## 4.Experiments: 实验
+## 4·Experiments: 实验
 
-## 5.Results: 结果
+## 5·Results: 结果
 
-## 6.Conclusions: 结论
+## 6·Conclusions: 结论
