--- a/Models/SpeechLM/2024.09.18_CoFi-Speech.md
+++ b/Models/SpeechLM/2024.09.18_CoFi-Speech.md
@@ -52,7 +52,7 @@ The coarse-to-fine multi-scale generation, especially for the stack-of-scale app
 
 从粗到细的多尺度生成, 尤其是堆叠尺度生成方式, 也被验证为文本转语音追求高质量神经编解码语言模型的重要方法.
 
-## 1.Introduction: 引言
+## 1·Introduction: 引言
 
 The success of large language models (LLMs) in text domain ([GPT-3 [1]](../TextLM/2020.05.28_GPT-3.md); [GPT-4 [2]](../TextLM/2023.03.15_GPT-4.md); [LLaMA 2 [3]](../TextLM/2023.07.18_LLaMA2.md)) has demonstrated their great capability in discrete sequence generation.
 It also inspires the birth of a new text-to-speech synthesis (TTS) paradigm based on the neural codec language model (CLM) ([VALL-E X [4]](2023.03.07_VALL-E_X.md); [TorToise-TTS [5]](../Diffusion/2023.05.12_TorToise-TTS.md); [BASE TTS [6]](2024.02.12_BASE-TTS.md)), which treats TTS as a next-token prediction task.
@@ -72,9 +72,9 @@ Then, we propose two LM-based approaches to predict this multi-scale speech repr
 In experiments, we present subjective and objective evaluations to demonstrate that ***CoFi-Speech*** significantly outperforms baseline systems based on single-scale speech sequences on naturalness and similarity, where stack-of-scale generation performs best.
 Finally, we conduct detailed ablation studies to analyze multi-scale coding and generation, to further validate the effectiveness of `speaking from coarse to fine` in achieving high-quality CLM-based TTS.
 
-## ~~2.Related Works: 相关工作~~
+## ~~2·Related Works: 相关工作~~
 
-## 3.Methodology: 方法
+## 3·Methodology: 方法
 
 ![Images/2024.09.18_CoFi-Speech_Fig.01.png](Images/2024.09.18_CoFi-Speech_Fig.01.png)
 
@@ -130,7 +130,7 @@ Finally, we apply in-context learning (ICL) ([Seed-TTS [25]](2024.06.04_Seed-TTS
 Specifically, we extract speaker embedding and speech tokens from the reference audio as speech prompts.
 The transcript of the reference audio is also concatenated with the input text as the text prompt.
 
-## 4.Experiments: 实验
+## 4·Experiments: 实验
 
 ### Training Configuration
 
@@ -163,7 +163,7 @@ In \ref{ssec:tts_comparison}, we use a subset with 100 utterances for subjective
 There are 10 native speakers invited to the test to rate each audio with a score ranging from 1 to 5 in terms of naturalness (NMOS) and speaker similarity (SMOS), respectively.
 In codec evaluation, We adopt Mel-cepstrum distortion (MCD, dB) and CER to measure reconstruction quality.
 
-## 5.Results: 结果
+## 5·Results: 结果
 
 ### TTS System Comparison
 
@@ -197,7 +197,7 @@ Similarly, ***CoFi-Speech-SoS*** employs multiple LMs to achieve coarse-to-fine 
 The first LM absorbs richer contextual information to generate the high-scale sequence and guides the next LMs to generate lower-scale sequences recursively.
 This validates the effectiveness of `speaking from coarse to fine` in addressing `recency bias` via explicit multi-scale modeling.
 
-## 6.Conclusions: 结论
+## 6·Conclusions: 结论
 
 This work introduces ***CoFi-Speech***, a novel approach to enhance CLM-based TTS through coarse-to-fine generation.
 The framework comprises two key components: 1) ***CoFi-Codec***, a multi-scale speech codec that encodes speech into the discrete, multi-scale representation and decodes them back, and 2) ***CoFi-LM***, which predicts this representation using two strategies: single-LM-based chain-of-scale generation and multiple-LM-based stack-of-scale generation.
