--- a/Models/SpeechLM/2024.09.29_PALM.md
+++ b/Models/SpeechLM/2024.09.29_PALM.md
@@ -30,14 +30,14 @@ We demonstrate the effectiveness of our approach on 11 audio recognition dataset
 Our method is either on par with or outperforms other approaches while being computationally less demanding.
 Code is available at [this https URL](https://github.com/asif-hanif/palm).
 
-## 1.Introduction: 引言
+## 1·Introduction: 引言
 
-## 2.Related Works: 相关工作
+## 2·Related Works: 相关工作
 
-## 3.Methodology: 方法
+## 3·Methodology: 方法
 
-## 4.Experiments: 实验
+## 4·Experiments: 实验
 
-## 5.Results: 结果
+## 5·Results: 结果
 
-## 6.Conclusions: 结论
+## 6·Conclusions: 结论
