--- a/Models/SpeechLM/2024.10.06_HALL-E.md
+++ b/Models/SpeechLM/2024.10.06_HALL-E.md
@@ -55,7 +55,7 @@ Audio samples, dataset, codes and pre-trained models are available at [this http
 我们实现了帧率低至 8 Hz 的稳定分钟长语音合成, 使得单次推断可以实现分钟长度的语音合成.
 音频样本、数据集、代码和预训练模型可在 [此 https URL](https://yutonishimura-v2.github.io/HALL-E_DEMO/) 获得.
 
-## 1.Introduction: 引言
+## 1·Introduction: 引言
 
 Recent advances in large language models (LLMs) have enabled us to model complex linguistic structures and patterns with unprecedented precision in natural language processing tasks~\citep{brown2020language, chowdhery2023palm, zeng2023glm130b}.
 Motivated by these developments, LLM-based text-to-speech (TTS) models have gained significant research interest for their ability to model complex speech structures and patterns, enabling the synthesis of more natural-sounding speech in a zero-shot manner~\citep{wang2023valle, zhang2023vallex, song2024ella, han2024valler, chen2024valle2, xin2024ralle, meng2024melle}.
@@ -82,7 +82,7 @@ The test set consists of 8 hours of speech data with transcriptions created by p
 4) We thoroughly conducted experiments to provide best practices for managing the trade-off between reducing frame rate and producing high-quality speech, while demonstrating the effectiveness and efficiency of our approach.
 We open-source dataset, codes and pre-trained models along with audio samples at [Demo Page](https://yutonishimura-v2.github.io/HALL-E_DEMO/).
 
-## 2.Related Works: 相关工作
+## 2·Related Works: 相关工作
 
 ### Neural Audio Codec Models
 
@@ -159,9 +159,9 @@ Figure~\ref{fig:preliminary}, where we evaluated the performance of Encodec~\cit
 Specifically, it is confirmed that training becomes entirely difficult at 8Hz.
 Therefore, in this study, we propose a NAC model that works even at an 8Hz, demonstrating a significant improvement over existing limitations.
 
-## 3.Methodology: 方法
+## 3·Methodology: 方法
 
-### 3.1.MReQ: Multi-Resolution Requantization
+### 3.1·MReQ: Multi-Resolution Requantization
 
 This section introduces MReQ, a post-training framework for hierarchically reorganizing a pre-trained RVQ module to reduce the frame rate.
 Specifically, MReQ incorporates a multi-resolution residual vector quantization (MRVQ) module to a pre-trained NAC model as shown in Figure~\hyperref[fig:mreq]{\ref*{fig:mreq}}, and continues training the NAC model in a teacher-student distillation manner.
@@ -274,11 +274,11 @@ Compared to training from scratch, this allows for more efficient and stable con
 Our post-training approach is designed to be independent of the encoder-decoder architecture of the original NAC model, as we only assumed the use of RVQ.
 Consequently, by utilizing state-of-the-art NAC models such as SpeechTokenizer~\citep{Zhang2024SpeechTokenizer} instead of Encodec~\citep{defossez2022encodec}, it is possible to achieve higher performance at a lower frame rate.
 
-## 4.Experiments: 实验
+## 4·Experiments: 实验
 
-## 5.Results: 结果
+## 5·Results: 结果
 
-## 6.Conclusions: 结论
+## 6·Conclusions: 结论
 
 We introduced two novel approaches for minute-long zero-shot text-to-speech synthesis: MReQ and HALL-E.
 MReQ reduced the frame rate of the Encodec model to 8 Hz by reorganizing audio tokens via MRVQ.
