--- a/Models/SpeechLM/2024.10.20_Ichigo.md
+++ b/Models/SpeechLM/2024.10.20_Ichigo.md
@@ -30,14 +30,14 @@ We present a comprehensive training methodology, including pre-training on multi
 Notably, ***Ichigo*** exhibits a latency of just 111 ms to first token generation, significantly lower than current models.
 Our approach not only advances the field of multimodal AI but also provides a framework for smaller research teams to contribute effectively to open-source speech-language models.
 
-## 1.Introduction: 引言
+## 1·Introduction: 引言
 
-## 2.Related Works: 相关工作
+## 2·Related Works: 相关工作
 
-## 3.Methodology: 方法
+## 3·Methodology: 方法
 
-## 4.Experiments: 实验
+## 4·Experiments: 实验
 
-## 5.Results: 结果
+## 5·Results: 结果
 
-## 6.Conclusions: 结论
+## 6·Conclusions: 结论
