--- a/Models/SpeechLM/2024.10.29_VADUSA.md
+++ b/Models/SpeechLM/2024.10.29_VADUSA.md
@@ -44,7 +44,7 @@ Our approach demonstrates strong generalization across large datasets and variou
 此外, 在采样过程中引入容忍度机制, 也能加速推理, 而不会损失质量.
 我们的方法在大型数据集和各种语音 Token 类型上都表现出了强大的泛化能力.
 
-## 1.Introduction: 引言
+## 1·Introduction: 引言
 
 <details>
 <summary>展开原文</summary>
@@ -120,9 +120,9 @@ LLM 的范式随之引入语音建模和合成领域.
 通过整合容忍性机制, ***VADUSA*** 不仅能加速解码过程, 还通过有效管理推测解码的固有不确定性来增强整体合成的健壮性和质量.
 这种新颖的方法在快速解码和保持高质量合成之间架起了桥梁.
 
-## ~~2.Related Works: 相关工作~~
+## ~~2·Related Works: 相关工作~~
 
-## 3.Methodology: 方法
+## 3·Methodology: 方法
 
 <details>
 <summary>展开原文</summary>
@@ -294,7 +294,7 @@ Finally, we run the greedy algorithm to build the sparse tree for each token typ
 然后, 我们在 [LibriTTS [24]](../../Datasets/2019.04.05_LibriTTS.md) 的子集上运行完整树的前向传递, 以获得每个节点的接受概率.
 最后, 我们使用贪婪算法来为每个 Token 类型构建稀疏树.
 
-## 4.Experiments: 实验
+## 4·Experiments: 实验
 
 <details>
 <summary>展开原文</summary>
@@ -418,7 +418,7 @@ TTS 性能通过一个 conformer-transducer 模型 ([Github](https://huggingface
 这种改进在较小数据集上尤为显著, 因为 ***VADUSA*** 头能够帮助捕捉到上下文信息.
 与自然语言建模任务中的类似策略相比, 这种表现有所不同.
 
-## 5.Results: 结果
+## 5·Results: 结果
 
 ### Ablation Study: 消融研究
 
@@ -507,7 +507,7 @@ This reflects a trade-off that arises when relying on draft heads within the con
 WERs 的差异是可理解的, 因为额外的头在学习上下文信息方面的能力有固有的限制.
 这反映了在基础模型约束下依赖草稿头所产生的权衡.
 
-## 6.Conclusions: 结论
+## 6·Conclusions: 结论
 
 <details>
 <summary>展开原文</summary>
