--- a/Models/Diffusion/2024.10.09_F5-TTS.md
+++ b/Models/Diffusion/2024.10.09_F5-TTS.md
@@ -60,6 +60,10 @@ We release all code and checkpoints to promote community development ([Github](h
 
 ## 1·Introduction: 引言
 
+<details>
+<summary>展开原文</summary>
+
+
 Recent research in Text-to-Speech (TTS) has experienced great advancement ([Tacotron2 [1]](../TTS2_Acoustic/2017.12.16_Tacotron2.md); [Transformer-TTS [2]](../TTS2_Acoustic/2018.09.19_TransformerTTS.md); [FastSpeech 2 [3]](../TTS2_Acoustic/2020.06.08_FastSpeech2.md); [Glow-TTS [4]](../TTS2_Acoustic/2020.05.22_Glow-TTS.md); [VITS [5]](../E2E/2021.06.11_VITS.md); [Grad-TTS [6]](../TTS2_Acoustic/2021.05.13_Grad-TTS.md); [VioLA [7]](../SpeechLM/2023.05.25_VioLA.md); [NaturalSpeech [8]](../E2E/2022.05.09_NaturalSpeech.md)).
 With a few seconds of audio prompt, current TTS models are able to synthesize speech for any given text and mimic the speaker of audio prompt ([VALL-E [9]](../SpeechLM/2023.01.05_VALL-E.md); [VALL-E X [10]](../SpeechLM/2023.03.07_VALL-E_X.md)).
 The synthesized speech can achieve high fidelity and naturalness that they are almost indistinguishable from human speech ([NaturalSpeech 2 [11]](2023.04.18_NaturalSpeech2.md); [NaturalSpeech 3 [12]](2024.03.05_NaturalSpeech3.md); [VALL-E 2 [13]](../SpeechLM/2024.06.08_VALL-E_2.md); [Voicebox [14]](../SpeechLM/2023.06.23_VoiceBox.md)).
@@ -90,6 +94,41 @@ We stress the deep entanglement of semantic and acoustic features in the E2 TTS 
 With in-depth ablation studies, our proposed ***F5-TTS*** demonstrates stronger robustness, in generating more faithful speech to the text prompt, while maintaining comparable speaker similarity.
 Additionally, we introduce an inference-time sampling strategy for flow steps substantially improving naturalness, intelligibility, and speaker similarity of generation.
 This approach can be seamlessly integrated into existing flow matching based models without retraining.
+
+</details>
+<br>
+
+文本转语音的近期研究取得了显著进展 ([Tacotron2 [1]](../TTS2_Acoustic/2017.12.16_Tacotron2.md); [Transformer-TTS [2]](../TTS2_Acoustic/2018.09.19_TransformerTTS.md); [FastSpeech 2 [3]](../TTS2_Acoustic/2020.06.08_FastSpeech2.md); [Glow-TTS [4]](../TTS2_Acoustic/2020.05.22_Glow-TTS.md); [VITS [5]](../E2E/2021.06.11_VITS.md); [Grad-TTS [6]](../TTS2_Acoustic/2021.05.13_Grad-TTS.md); [VioLA [7]](../SpeechLM/2023.05.25_VioLA.md); [NaturalSpeech [8]](../E2E/2022.05.09_NaturalSpeech.md)).
+通过几秒钟的音频提示, 当前的 TTS 模型能够为任何给定的文本合成语音, 并模仿参考音频中的说话人 ([VALL-E [9]](../SpeechLM/2023.01.05_VALL-E.md); [VALL-E X [10]](../SpeechLM/2023.03.07_VALL-E_X.md)).
+合成的语音可以达到几乎与人类语音无法区分的高保真度和自然度 ([NaturalSpeech 2 [11]](2023.04.18_NaturalSpeech2.md); [NaturalSpeech 3 [12]](2024.03.05_NaturalSpeech3.md); [VALL-E 2 [13]](../SpeechLM/2024.06.08_VALL-E_2.md); [Voicebox [14]](../SpeechLM/2023.06.23_VoiceBox.md)).
+
+尽管基于自回归 (AR) 的 TTS 模型展示了直观的方式, 即连续预测下一个 Token, 并实现了有前景的零样本 TTS 能力, 但自回归建模的固有限制需要额外努力来解决推理延迟和暴露偏差等问题 ([ELLA-V [15]](../SpeechLM/2024.01.14_ELLA-V.md); [VALL-T [16]](../SpeechLM/2024.01.25_VALL-T.md); [VALL-E R [17]](../SpeechLM/2024.06.12_VALL-E_R.md); [RALL-E [18]](../SpeechLM/2024.04.04_RALL-E.md); [VoiceCraft [19]](../SpeechLM/2024.03.25_VoiceCraft.md)).
+此外, 语音分词器的质量对于自回归模型实现高保真合成至关重要 ([SoundStream [20]](../Speech_Neural_Codec/2021.07.07_SoundStream.md); [EnCodec [21]](../Speech_Neural_Codec/2022.10.24_EnCodec.md); [AudioDec [22]](../Speech_Neural_Codec/2023.05.26_AudioDec.md); [HiFi-Codec [23]](../Speech_Neural_Codec/2023.05.04_HiFi-Codec.md); [SpeechTokenizer [24]](../Speech_Neural_Codec/2023.08.31_SpeechTokenizer.md); [dMel [25]](../Speech_Neural_Codec/2024.07.22_dMel.md); [NDVQ [26]](../Speech_Neural_Codec/2024.09.19_NDVQ.md)).
+因此, 最近的研究探索了在连续空间中直接建模 ([ARDiT [27]](2024.06.08_ARDiT.md); [MAR [28]](../CV/2024.06.17_MAR.md); [MELLE [29]](../SpeechLM/2024.07.11_MELLE.md)), 以提高合成语音的质量.
+
+尽管自回归模型展示了令人印象深刻的零样本性能, 因为它们执行隐式的时长建模并可以利用多种采样策略, 但非自回归 (NAR) 模型通过并行处理受益于快速推理, 并有效平衡了合成质量和延迟.
+值得注意的是, 扩散模型 ([DDPM [30]](2020.06.19_DDPM.md); [Song et al.(2020) [31]](2020.11.26_Score-Based_Generative_Modeling_through_SDE.md)) 对当前非自回归语音模型的成功贡献最大 ([NaturalSpeech 2 [11]](2023.04.18_NaturalSpeech2.md); [NaturalSpeech 3 [12]](2024.03.05_NaturalSpeech3.md)).
+特别是, [最优传输的流匹配技术 (FM-OT) [32]](2022.10.06_Flow_Matching.md) 在最近的文本转语音 ([Voicebox [14]](../SpeechLM/2023.06.23_VoiceBox.md); [VoiceFlow [33]](2023.09.10_VoiceFlow.md); [Matcha-TTS [34]](2023.09.06_Matcha-TTS.md); [DiTTo-TTS [35]](2024.06.17_DiTTo-TTS.md); [E2 TTS [36]](2024.06.26_E2_TTS.md)) 以及图像生成 ([StableDiffusion3 [37]](2024.03.05_StableDiffusion3.md)) 和音乐生成 ([FluxMusic [38]](2024.09.01_FluxMusic.md)) 等研究领域中得到了广泛应用.
+
+与基于自回归的模型不同, 输入文本与合成语音之间的对齐建模对于基于非自回归的模型至关重要且具有挑战性.
+尽管 [NaturalSpeech 3 [12]](2024.03.05_NaturalSpeech3.md) 和[Voicebox [14]](../SpeechLM/2023.06.23_VoiceBox.md) 使用帧级音素对齐; [Matcha-TTS [34]](2023.09.06_Matcha-TTS.md) 采用单调对齐搜索并依赖于音素级时长模型; 最近的研究发现, 在文本和语音之间引入这种刚性和不灵活的对齐会阻碍模型生成更高自然度的结果 ([E2 TTS [36]](2024.06.26_E2_TTS.md); [Seed-TTS [39]](../SpeechLM/2024.06.04_Seed-TTS.md)).
+
+- [E3 TTS [40]](2023.11.02_E3_TTS.md) 放弃了音素级时长, 并在输入序列上应用交叉注意力, 但音频质量有限.
+- [DiTTo-TTS [35]](2024.06.17_DiTTo-TTS.md) 使用 [Diffusion Transformer (DiT) [41]](2022.12.19_DiT.md), 并在预训练语言模型的编码文本上进行交叉注意力条件化.
+为了进一步增强对齐, 它使用预训练语言模型微调神经音频编解码器, 将语义信息注入生成的表示中.
+- 相比之下, [E2 TTS [36]](2024.06.26_E2_TTS.md) 基于 [Voicebox [14]](../SpeechLM/2023.06.23_VoiceBox.md), 采用了一种更简单的方式, 即移除音素和时长预测器, 并直接使用填充了填充标记的字符作为输入, 长度与梅尔频谱图相同.
+这种简单的方案也实现了非常自然和逼真的合成结果.
+然而, 我们发现 E2 TTS 在文本和语音对齐方面存在鲁棒性问题.
+- [Seed-TTS [39]](../SpeechLM/2024.06.04_Seed-TTS.md) 采用了类似的策略并取得了优异的结果, 尽管模型细节未详细阐述.
+
+在这些不显式建模音素级时长的方式中, 模型根据给定的总序列长度学习分配每个单词或音素的长度, 从而改善了韵律和节奏.
+
+在本文中, 我们提出了 ***F5-TTS, 一个通过流匹配生成流畅和忠实语音的童话故事讲述者***.
+在保持流水线简单性的同时, ***F5-TTS*** 利用 Diffusion Transformer 与 [ConvNeXt V2 [42]](../_Basis/2023.01.02_ConvNeXt_V2.md) 更好地处理上下文学习中的文本-语音对齐.
+我们强调了 E2 TTS 模型设计中语义和声学特征的深度纠缠, 这存在固有问题, 并将导致对齐失败问题, 这些问题无法通过重新排序简单解决.
+通过深入的消融研究, 我们提出的 ***F5-TTS*** 展示了更强的鲁棒性, 在生成更忠实于文本提示的语音的同时, 保持了可比拟的说话者相似性.
+此外, 我们引入了一种推理时采样策略, 显著提高了生成语音的自然度、可理解性和说话者相似性.
+这种方法可以无缝集成到现有的基于流匹配的模型中, 而无需重新训练.
 
 ## 2·Preliminaries: 预备知识
 
