--- a/Models/SVC/2024.09.13_LHQ-SVC.md
+++ b/Models/SVC/2024.09.13_LHQ-SVC.md
@@ -66,6 +66,67 @@ Over and above these work, Lu et al. \cite{lu2024comosvc} proposed CoMoSVC, a co
 
 ## 3·Methodology: 方法
 
+We propose a new model, LHQ-SVC, designed to significantly improve performance and reduce the model size while maintaining high accuracy, so that it can efficiently run on CPUs. The LHQ-SVC model focuses on optimising CPU execution, in contrast to the traditionally GPU-optimised code which relies heavily on parallel computation.
+
+While CPUs have fewer cores compared to GPUs, their multi-core nature still allows for parallelism, albeit to a lesser extent. Using parallel frameworks like OpenMP or Intel Threading Building Blocks (TBB) can enable efficient multi-threaded programming, maximizing the CPU's multi-core capabilities. CPU performance tuning tools like Intel VTune Profiler can be used to identify performance bottlenecks, particularly in hotspot areas of code, such as I/O operations, memory access patterns, and cache management. Optimising these areas contributes to improving computational efficiency. In the training phase of LHQ-SVC, once robust training reaches a certain number of iterations, the network undergoes evaluation. Specifically, the performance metric, calculated as the ratio of the CLIP score to latency change before and after removing specific modules, is used to determine which parts of the model should be retained or removed. If the network's latency exceeds the target, modules that contribute to latency but not performance are removed. In contrast, modules with the highest performance contribution are duplicated to further strengthen the network's structure.
+
+$$
+{\operatorname*{\hat{\epsilon}_\theta}}(t,\mathbf{z}_t)=\prod\left\{p(\text{Cross-Attention}(\mathbf{z}_t,\mathbf{c}),I),p(D(\mathbf{z}_t,t),I)\right\}
+$$
+
+This dynamic tuning process allows continuous robust training, leading to an optimised network structure without the need for retraining. The result is a well-balanced network with high performance and computational efficiency, suitable for deployment on CPU-based systems.
+
+Moreover, the time consumption of Mini-SVC can be further reduced by minimizing diffusion steps during the transition from the teacher model to the student model. By distilling the teacher model’s multi-step output into a single-step output for the student model, as shown in Figure ~\ref{frame1}, we effectively streamline the transformation process.
+
+We consider a continuous-time diffusion framework where the training data is represented as $\tilde{x} \sim p(\tilde{x})$. The diffusion model operates with latent states denoted by $\tilde{y} = \{\tilde{y}_\tau \mid \tau \in [0,1]\}$, governed by a noise schedule determined by a differentiable function $\beta_\tau$. This function controls the signal-to-noise ratio (SNR), defined as $\theta_{\tau} = \log\left(\frac{\beta_\tau^2}{\gamma_\tau^2}\right)$, which monotonically decreases over time. The forward diffusion process $r(\tilde{y} \mid \tilde{x})$ is modeled as a Gaussian distribution, with the following Markovian structure:
+
+$$
+\begin{aligned}
+r(\tilde{y}_\tau \mid \tilde{x}) &= \mathcal{N}(\tilde{y}_\tau; \beta_\tau \tilde{x}, \gamma_\tau^2 \mathbf{I}) \\
+r(\tilde{y}_\tau \mid \tilde{y}_\rho) &= \mathcal{N}(\tilde{y}_\tau; \frac{\beta_\tau}{\beta_\rho} \tilde{y}_\rho, \gamma_{\tau|\rho}^2 \mathbf{I}) \\
+\gamma_{\tau|\rho}^2 &= \left(1 - e^{\theta_\tau - \theta_\rho}\right) \gamma_\tau^2
+\end{aligned}
+$$
+
+The goal of the diffusion model is to recast the denoising task into an estimation problem, where $\tilde{x}_\psi(\tilde{y}_\tau) \approx \tilde{x}$. The model is trained using a weighted mean squared error loss function over uniformly sampled time points $\tau \in [0,1]$. This loss can be interpreted as either a variational lower bound on the log-likelihood of the data or as a type of denoising score matching:
+
+$$
+\mathbb{E}_{\zeta, \tau} \left[v(\theta_\tau) \|\tilde{x}_\psi(\tilde{y}_\tau) - \tilde{x}\|_2^2 \right]
+$$
+
+After training, the model generates samples through various methods. The simplest of these is discrete-time ancestral sampling, derived by reversing the forward diffusion process:
+
+$$
+r(\tilde{y}_\rho \mid \tilde{y}_\tau, \tilde{x}) = \mathcal{N}(\tilde{y}_\rho; \nu_{\rho|\tau}(\tilde{y}_\tau, \tilde{x}), \gamma_{\rho|\tau}^2 \mathbf{I})
+$$
+
+where
+
+$$
+\begin{aligned}
+\nu_{\rho|\tau}(\tilde{y}_\tau, \tilde{x}) &= e^{\theta_\tau - \theta_\rho} \frac{\beta_\rho}{\beta_\tau} \tilde{y}_\tau + \left(1 - e^{\theta_\tau - \theta_\rho}\right) \beta_\rho \tilde{x} \\
+\gamma_{\rho|\tau}^2 &= \left(1 - e^{\theta_\tau - \theta_\rho}\right) \gamma_\rho^2
+\end{aligned}
+$$
+
+Using this reverse process, we define an ancestral sampling method. Starting from $\tilde{y}_1 \sim \mathcal{N}(\mathbf{0}, \mathbf{I})$, the ancestral sampling update follows:
+
+$$
+\begin{split}
+\tilde{y}_\rho &= \nu_{\rho|\tau}\left(\tilde{y}_\tau, \hat{\tilde{x}}_\psi(\tilde{y}_\tau)\right) + \sqrt{\left(\gamma_{\rho|\tau}^2\right)^{1-\kappa} \left(\gamma_{\tau|\rho}^2\right)^{\kappa}} \zeta \\
+&= e^{\theta_\tau - \theta_\rho} \frac{\beta_\rho}{\beta_\tau} \tilde{y}_\tau + \left(1 - e^{\theta_\tau - \theta_\rho}\right) \beta_\rho \hat{\tilde{x}}_\psi(\tilde{y}_\tau) \\
+&+ \sqrt{\left(\gamma_{\rho|\tau}^2\right)^{1-\kappa} \left(\gamma_{\tau|\rho}^2\right)^{\kappa}} \zeta
+\end{split}
+$$
+
+where $\zeta$ represents Gaussian noise, and $\kappa$ is a hyperparameter controlling the interpolation between noise levels. The DDIM (Denoising Diffusion Implicit Models) sampler, an efficient variant, solves an ODE to approximate the sampling process:
+
+$$
+\tilde{y}_\rho = \beta_\rho \tilde{x}_\psi(\tilde{y}_\tau) + \gamma_\rho \frac{\tilde{y}_\tau - \beta_\tau \tilde{x}_\psi(\tilde{y}_\tau)}{\gamma_\tau}
+$$
+
+This sampler provides superior performance to the standard ODE-based methods, particularly when $\tilde{x}_\psi(\tilde{y}_\tau)$ satisfies smoothness conditions. As the number of integration steps $N \rightarrow \infty$, the numerical error vanishes, enabling a trade-off between sample quality and computational efficiency.
+
 ## 4·Experiments: 实验
 
 ## 5·Results: 结果
