--- a/Models/SpeechLM/2024.07.07_CosyVoice.md
+++ b/Models/SpeechLM/2024.07.07_CosyVoice.md
@@ -80,7 +80,7 @@ However, the impact of these approaches on text-to-speech (TTS) remains unclear.
 Furthermore, leveraging these supervised tokens, we propose ***CosyVoice***, a scalable and efficient zero-shot TTS synthesizer.
 ***CosyVoice*** is comprised of an LLM for converting text into semantic token sequences and a conditional flow matching model for the subsequent synthesis of speech from these tokens.
 In contrast to prior systems like [TorToise TTS (2023)](../Diffusion/2023.05.12_TorToise-TTS.md), which employs an LLM in conjunction with a [denoising diffusion probabilistic models (DDPM) (2020)](../Diffusion/2020.06.19_DDPM.md), ***CosyVoice*** utilizes a conditional flow matching approach, as it has been demonstrated to accelerate both training and inference compared to traditional diffusion models ([VoiceBox (2023)](2023.06.23_VoiceBox.md)).
-While existing methods incorporate flow matching in TTS ([VoiceBox (2023)](2023.06.23_VoiceBox.md); [VoiceFlow (2023)](../Flow/2023.09.10_VoiceFlow.md); [Matcha-TTS (2023)](../Diffusion/2023.09.06_Matcha-TTS.md); [ReFlow-TTS (2023)](../Flow/2023.09.29_ReFlow-TTS.md)), they often rely on phoneme duration prediction, necessitating the use of supplementary phonemizers and forced aligners.
+While existing methods incorporate flow matching in TTS ([VoiceBox (2023)](2023.06.23_VoiceBox.md); [VoiceFlow (2023)](../Diffusion/2023.09.10_VoiceFlow.md); [Matcha-TTS (2023)](../Diffusion/2023.09.06_Matcha-TTS.md); [ReFlow-TTS (2023)](../Flow/2023.09.29_ReFlow-TTS.md)), they often rely on phoneme duration prediction, necessitating the use of supplementary phonemizers and forced aligners.
 ***CosyVoice***, however, bypasses these dependencies, offering a more direct and efficient pathway from text to speech.
 
 Our research contributes to the field of speech generation in several novel ways:
