--- a/Models/SVC/2024.09.13_LHQ-SVC.md
+++ b/Models/SVC/2024.09.13_LHQ-SVC.md
@@ -226,4 +226,16 @@ Conversion experiments were performed to evaluate the effect of these sampling s
 
 ## 5·Results: 结果
 
+The performance of LHQ-SVC, along with several baseline models, is summarized in Table~\ref{tab1}.
+The results for LHQ-SVC and LHQ-SVC$_{mobile}$ stand out due to their lightweight nature and performance efficiency, especially for mobile device applications.
+LHQ-SVC, with a model size of 67.89 MB, achieves impressive results across multiple metrics, including the highest PESQ score of 3.02, and a Naturalness MOS of 4.02, which is the best among all models compared.
+These results indicate that LHQ-SVC excels in generating high-quality singing voice conversions while maintaining a relatively small model size.
+On the other hand, LHQ-SVC$_{mobile}$ is an even more compact version, with a model size of only 53 MB, optimized for mobile platforms.
+Although it shows slightly lower performance in terms of STOI and PESQ compared to LHQ-SVC, it still provides competitive results, especially in terms of Similarity MOS with a score of 3.91, making it a viable choice for lightweight applications requiring fast and efficient voice conversion on mobile devices.
+The balance between the performance and model size makes both LHQ-SVC and LHQ-SVC$_{mobile}$ particularly appealing for practical use, as they deliver strong results in Naturalness MOS and Similarity MOS while being resource-efficient.
+
+In order to verify that our LHQ-SVC is efficient enough, we ran it on the Intel Core i7-11370H on the computer side as well as on the Qualcomm Snapdragon 8 Gen3 processor equipped with the Qualcomm Snapdragon 8 Gen3 processor, and the results of the run are shown in the figure~\ref{re1}.
+As can be seen from the figure~\ref{re1}, after optimization, the processing speed has been greatly improved, in the Intel Core i7 model device reasoning 3min30s audio, the time from 1min (processing timespeed of about 60/210, about 30\% of the original audio time) to about 11s (processing timespeed of about 11/210, about 5.2\% of the original audio time), in the GPU device reasoning even more to about 9s (processing timespeed of about 6/210, about 2.2\% of the original audio time), to achieve the real-time efficient demand., and the inference on the GPU device even reaches about 9s (the processing speed is about 6/210, which is about 2.2\% of the original audio time), which achieves the real-time and high efficiency requirements.
+At the same time, we simplified the algorithm running on a cell phone to run slightly slower than the client on a Qualcomm Snapdragon 8 Gen3, meeting the need for lightweight efficiency.
+
 ## 6·Conclusions: 结论
