--- a/Models/SVC/2024.09.13_LHQ-SVC.md
+++ b/Models/SVC/2024.09.13_LHQ-SVC.md
@@ -239,3 +239,7 @@ As can be seen from the figure~\ref{re1}, after optimization, the processing spe
 At the same time, we simplified the algorithm running on a cell phone to run slightly slower than the client on a Qualcomm Snapdragon 8 Gen3, meeting the need for lightweight efficiency.
 
 ## 6·Conclusions: 结论
+
+In this paper, we introduced LHQ-SVC, a novel lightweight Singing Voice Conversion model designed to run efficiently on CPUs while maintaining high-quality voice conversion performance.
+Through careful optimization, including the conversion of GPU-specific code and the use of parallel computing frameworks, we reduced the computational demand and model size significantly.
+Experimental results demonstrated that LHQ-SVC achieves competitive performance in terms of intelligibility, perceptual speech quality, and naturalness, while also delivering substantial improvements in processing speed across different hardware platforms.
